Add unit tests about throwing expection for radio
Bug: 262583864
Test: atest android.hardware.radio.tests.unittests
Test: com.android.server.broadcastradio
Change-Id: I0264c0541cca4a026e4b4d3ab37cd4301f9887ab